# fjcloud

./: .env.local.example  .gitignore  .gitleaks.toml  Makefile  README.md  ROADMAP.md  docker-compose.override.yml.example  docker-compose.yml
infra/: Cargo.toml  DIRMAP.md  Dockerfile
infra/.cargo/: audit.toml
infra/aggregation-job/: Cargo.toml  DIRMAP.md
infra/aggregation-job/src/: DIRMAP.md  config.rs  lib.rs  main.rs  rollup.rs
infra/api/: Cargo.toml  DIRMAP.md  build.rs
infra/api/src/: DIRMAP.md  config.rs  db.rs  errors.rs  helpers.rs  invoicing.rs  lib.rs  main.rs  openapi.rs  password.rs  router.rs  scopes.rs  startup.rs  startup_env.rs  startup_repos.rs  startup_test.rs  state.rs  usage.rs  validation.rs  vm_providers.rs
infra/api/src/auth/: DIRMAP.md  admin.rs  api_key.rs  claims.rs  disposable_email_domains.txt  error.rs  lockout.rs  mod.rs  storage.rs  tenant.rs
infra/api/src/dns/: DIRMAP.md  cloudflare.rs  mock.rs  mod.rs  route53.rs
infra/api/src/invoicing/: DIRMAP.md  cold_storage.rs  line_items.rs  stripe_sync.rs
infra/api/src/middleware/: DIRMAP.md  metrics.rs  mod.rs  request_id.rs  request_logging.rs
infra/api/src/models/: DIRMAP.md  algolia_import_job.rs  api_key.rs  ayb_tenant.rs  cold_snapshot.rs  customer.rs  deployment.rs  index_migration.rs  index_replica.rs  invoice.rs  invoice_line_item.rs  mod.rs  rate_card.rs  rate_override.rs  resource_vector.rs  restore_job.rs  storage.rs  subscription.rs  tenant.rs  usage_daily.rs  vm_host_metrics.rs  vm_inventory.rs  vm_lifecycle_event.rs
infra/api/src/provisioner/: DIRMAP.md  aws.rs  cloud_init.rs  env_config.rs  hetzner.rs  mock.rs  mod.rs  multi.rs  region_map.rs  ssh.rs
infra/api/src/repos/: DIRMAP.md  advisory_lock.rs  algolia_import_job_repo.rs  api_key_repo.rs  ayb_tenant_repo.rs  cold_snapshot_repo.rs  customer_repo.rs  deployment_repo.rs  dispute_repo.rs  error.rs  in_memory_ayb_tenant_repo.rs  in_memory_cold_snapshot_repo.rs  in_memory_index_replica_repo.rs  in_memory_restore_job_repo.rs  in_memory_storage_bucket_repo.rs  in_memory_storage_key_repo.rs  index_migration_repo.rs  index_replica_repo.rs  invoice_repo.rs  mod.rs  pg_algolia_import_job_dispatch.rs  pg_algolia_import_job_lifecycle.rs  pg_algolia_import_job_reconciliation.rs  pg_algolia_import_job_repo.rs  pg_algolia_import_job_repo_tests.rs  pg_algolia_import_job_reservation.rs  pg_algolia_import_job_support.rs  pg_api_key_repo.rs  pg_ayb_tenant_repo.rs  pg_cold_snapshot_repo.rs  pg_customer_repo.rs  pg_customer_repo_columns.rs  pg_customer_repo_password_reset_resend.rs  pg_customer_repo_quota_warning.rs  pg_deployment_repo.rs  pg_dispute_repo.rs  pg_index_migration_repo.rs  pg_index_replica_repo.rs  pg_invoice_repo.rs  pg_rate_card_repo.rs  (+21 more)
infra/api/src/router/: DIRMAP.md  middleware.rs  route_assembly.rs
infra/api/src/routes/: DIRMAP.md  account.rs  api_keys.rs  auth.rs  billing.rs  browser_error_reporting.rs  discovery.rs  internal.rs  invoices.rs  migration.rs  mod.rs  oauth.rs  onboarding.rs  pricing.rs  public_infrastructure.rs  public_site.rs  (+5 more)
infra/api/tests/: DIRMAP.md  _local_ci_set_e_regression_fixture.rs  access_tracker_test.rs  account_test.rs  admin_alerts_test.rs  admin_audit_view_test.rs  admin_broadcast_test.rs  admin_cold_test.rs  admin_deployments_test.rs  admin_indexes_test.rs  admin_migrations_test.rs  admin_providers_test.rs  admin_replicas_test.rs  admin_token_audit_test.rs  admin_vm_kill_test.rs  admin_vms_test.rs  admin_webhook_events_test.rs  alerting_test.rs  alerting_webhook_smoke_test.rs  allyourbase_create_routes_test.rs  allyourbase_routes_test.rs  api_key_auth_test.rs  api_key_endpoints_test.rs  api_key_repo_test.rs  app_state_billing_dependencies_test.rs  auth_admin.rs  auth_endpoints_test.rs  auth_lockout_test.rs  auth_test.rs  ayb_admin_client_test.rs  ayb_bootstrap_test.rs  billing.rs  billing_endpoints_test.rs  billing_estimate_test.rs  billing_regression_test.rs  browser_error_reporting_test.rs  checkout_session_completion_test.rs  cold_snapshot_repo_test.rs  cold_tier_integration_test.rs  cold_tier_test.rs  (+120 more)
infra/billing/: Cargo.toml  DIRMAP.md
infra/billing/src/: DIRMAP.md  aggregation.rs  invoice.rs  lib.rs  plan.rs  pricing.rs  rate_card.rs  types.rs
infra/billing/tests/: web_pricing_parity_test.rs
infra/metering-agent/: Cargo.toml  DIRMAP.md
infra/metering-agent/src/: DIRMAP.md  circuit_breaker.rs  config.rs  counter.rs  delta.rs  health.rs  host_metrics.rs  host_metrics_writer.rs  main.rs  record.rs  scraper.rs  storage.rs  tenant_map.rs  version.rs
infra/migrations/: 001_customers.sql  002_deployments.sql  003_usage_records.sql  004_rate_cards.sql  005_invoices.sql  006_auth.sql  007_stripe_integration.sql  008_api_keys.sql  009_deployment_extensions.sql  010_alerts.sql  011_vm_inventory.sql  012_tenant_multitenant.sql  013_index_migrations.sql  014_billing_mode.sql  015_cold_tier.sql  016_cold_storage_pricing.sql  017_fix_restore_idempotency.sql  018_backfill_last_accessed.sql  019_hetzner_region_pricing.sql  020_add_oci_provider.sql  021_index_replicas.sql  022_canonicalize_replica_status.sql  023_drop_billing_mode.sql  024_billing_plan.sql  025_quota_warning_sent_at.sql  026_load_scraped_at.sql  027_add_cold_gb_months_unit.sql  028_subscriptions.sql  029_subscription_resubscribe_and_enterprise_price.sql  030_storage_service.sql  031_object_storage_pricing.sql  032_service_type.sql  033_invoice_pdf_url.sql  034_ayb_tenants.sql  035_customer_fractional_egress_carryforward.sql  036_per_mb_pricing.sql  037_add_local_provider.sql  038_replica_suspended_status.sql  039_fix_invoice_unit_check.sql  040_customers_deleted_at.sql  (+25 more)
infra/pricing-calculator/: Cargo.toml  DIRMAP.md  stage_02_research_findings.md  stage_03_itemized_checklist_findings.md  stage_03_research_findings.md  stage_04_research_findings.md
infra/pricing-calculator/docs/: stage5_research_findings.md
infra/pricing-calculator/src/: DIRMAP.md  lib.rs  presets.rs  ram_heuristics.rs  types.rs
infra/retention-job/: Cargo.toml  DIRMAP.md
infra/retention-job/src/: DIRMAP.md  config.rs  job.rs  main.rs
(+6721 files in other folders)
