[workspace]
members = [
    "billing",
    "metering-agent",
    "aggregation-job",
    "api",
    "pricing-calculator",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
uuid        = { version = "1.0", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
thiserror   = "1.0"
anyhow      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rust_decimal        = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate", "rust_decimal"] }
axum    = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dashmap = "6.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-route53 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ec2 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio", "sigv4a"] }
aws-sdk-sesv2 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio", "sigv4a"] }
aws-sdk-cloudwatch = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aes-gcm = "0.10"
quick-xml = { version = "0.37", features = ["serialize"] }
