[package]
name    = "metering-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fj-metering-agent"
path = "src/main.rs"

[dependencies]
async-trait  = "0.1"
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
axum         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest      = { workspace = true }
sqlx         = { workspace = true }
dashmap      = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
