[package]
name    = "pricing-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde               = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono              = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
